projects/icc/tabs/src/components/tab-group/tab-group.component.scss
:host {
  display: flex;
  flex-direction: column;
  height: 100%;

  .icc-mdc-tab-body-wrapper {
    height: 100%;
  }

  .icc-mdc-tab {
    padding: 0 10px;
    margin: 0 2px;
    white-space: nowrap;
  }

  ::ng-deep .icc-mdc-tab-body-active {
    display: flex;
    width: 100%;
    height: 100%;
    .icc-mdc-tab-body-content {
      width: 100%;
      height: 100%;
    }
  }

  ::ng-deep .mdc-tab--active {
    color: orange;
    border: 1px solid green;
  }

  ::ng-deep .icc-mdc-tab:hover {
    color: orange;
  }
}

::ng-deep [icc-align-tabs="start"] > .icc-mdc-tab-header {
  justify-content: start;
}

::ng-deep [icc-align-tabs="center"] > .icc-mdc-tab-header {
  justify-content: center;
}

::ng-deep [icc-align-tabs="end"] > .icc-mdc-tab-header {
  justify-content: end;
}

